# seminar-ada

./: .env.example  .gitignore  README.md  config.yaml  main.py  pyproject.toml
core/: bar_artifacts.py  broker.py  config.py  engine.py  engine_sync.py  metrics.py  persistence.py  portfolio.py  run_state.py  types.py  ui.py  walkforward.py
data/: cvd.py  downloader.py  loader.py  paths.py
docs/: bar_artifacts.md
docs/superpowers/plans/: 2026-05-13-sub-plan-A-data-and-indicators.md  (+6 more)
indicators/: ta.py
llm/: __init__.py  budget.py  budget_client.py  cache.py  client.py  recording.py
presentation/: README.md  demo_cheatsheet.md  script_en.md  script_id.md  slide_outline.md
scripts/: fetch_data.py  replay_decisions.py
strategies/: base.py  traditional.py
strategies/llm_agents/: chart.py  graph.py  prompts.py  state.py  strategy.py
tests/: conftest.py  test_bar_artifacts.py  test_broker.py  test_budget_client.py  test_config.py  test_cvd.py  test_downloader.py  test_engine.py  test_engine_sync.py  test_indicators.py  test_live_smoke.py  test_llm_budget.py  test_llm_cache.py  test_llm_chart.py  test_llm_client.py  test_llm_decision.py  test_llm_e2e_cached.py  test_llm_graph.py  test_llm_nodes.py  test_llm_state.py  test_llm_strategy.py  test_loader.py  test_main.py  test_metrics.py  test_paths.py  test_persistence.py  test_portfolio.py  test_recording_client.py  test_run_state.py  test_strategy_base.py  test_traditional.py  test_traditional_e2e.py  test_types.py  test_ui.py  test_walkforward.py
tests/fixtures/: bars_btc_5bars.csv
(+10 files in other folders)
