[project]
name = "seminar-ada"
version = "0.1.0"
description = "Comparative analysis of heuristic vs cognitive multi-agent crypto trading systems"
requires-python = ">=3.13,<3.14"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "ccxt>=4.3",
    "httpx>=0.27",
    "pyarrow>=16",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pandas-ta>=0.4.71b0",
    "ruff>=0.5",
    "respx>=0.21",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "data*", "indicators*", "strategies*", "llm*"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
